# eve.el

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  README.org  devenv.nix  eve.el
.github/workflows/: test.yml
.sisyphus/notepads/timestamp-ruler/: learnings.md
cli/: README.md  pyproject.toml  pyrightconfig.json
cli/src/eve_cli/: __main__.py  main.py  output.py  paths.py  tjm_v11.py
cli/src/eve_cli/commands/: batch.py  common.py  denoise.py  doctor.py  tag_fillers.py  text_edit.py  transcribe.py  trim_fillers.py
cli/src/eve_cli/utils/: fillers.py
cli/tests/: test_batch.py  test_denoise.py  test_doctor.py  test_tag_fillers.py  test_text_edit.py  test_tjm_v11_conformance.py  test_tjm_v11_schema_normalization.py  test_transcribe.py  test_trim_fillers.py  test_version.py
cli/tests/conformance/v1_1/invalid/: bad_version.json  missing_timebase.json  unsupported_render_policy.json  word_outside_segment.json
cli/tests/conformance/v1_1/valid/: filler_drop.json  marker_broll.json  minimal.json
docs/: architecture.md  dir  eve.info  eve.org  eve.texi  migration-notes.md  tjm-spec.md  video-text-editing.md
scripts/: build.sh  byte-compile  check-doc-drift  check.sh  checkdoc  ert  format  format.sh  gen-docs  install-elpa-deps  lint.sh  load-check  parse  run-cli.sh  startup-health-check.sh  sync-python.sh
test/: eve-test.el
